2nd commit changineg profile picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
           <div class="section__pic-container">
-             <img src="./assets/profile.png" alt="sanath kumar profile picture"/>
+             <img src="./assets/profile.jpeg" alt="sanath kumar profile picture"/>
           </div>
           <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
@@ -56,7 +56,6 @@
     </section>
 
     <section id="about">
-        <p class="section__text__p1">Get To Know More</p>
         
         <div class="section-container">
            <div class="section__pic-container">
@@ -206,7 +205,7 @@
                 />
                 <div>
                   <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
